--- a/pants.toml
+++ b/pants.toml
@@ -3,6 +3,8 @@ pants_version = "2.20.0"
 backend_packages = [
   "pants.backend.python",
   "pants.backend.python.lint.black",
+  "pants.backend.python.lint.isort",
+  "pants.backend.python.lint.flake8",
 ]
 
 [python]
