--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,4 +16,4 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Analysing the code with pylint
       run: |
-        ./pants --changed-since=main lint
+        ./pants lint ::
