--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,9 @@ line_length = 120
 
 [tool.black]
 line-length = 120
+
+[tool.flake8]
+max-line-length = 120
+
+[tool.poetry.dev-dependencies]
+Flake8-pyproject = "~1.2"
