--- a/src/python/yamato/requirements.txt
+++ b/src/python/yamato/requirements.txt
@@ -31,9 +31,9 @@ pytz==2021.1
 requests==2.24.0
 resolvelib==0.5.1
 retrying==1.3.3
-RPi.GPIO==0.7.0
+RPi.GPIO==0.7.1
 six==1.15.0
-systemd==0.16.1
+systemd~=0.17.0
 toml==0.10.2
 typed-ast==1.4.1
 urllib3==1.25.10
