fix(tanjiro): limit service restarts to 3 in a 5min interval

--- a/src/python/tanjiro/tanjiro.service
+++ b/src/python/tanjiro/tanjiro.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=Manage 12v Battery Charger
 After=multi-user.target
+StartLimitBurst=3
+StartLimitIntervalSec=300
 
 [Service]
 User=cdated
